processed/jira/txt/LU/LU-18773.txt
Key:        LU-18773
Summary:    index_orig may be used uninitialized in osc_brw_prep_request()
Link:       https://jira.whamcloud.com/browse/LU-18773
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Jian Yu
Reporter:   Jian Yu
Created:    Tue, 4 Mar 2025 22:00:36 +0000
Updated:    Fri, 14 Mar 2025 16:06:57 +0000
Resolved:   Thu, 13 Mar 2025 17:20:52 +0000

--- Description ---
lustre/osc/osc_request.c: In function 'osc_brw_prep_request':
lustre/osc/osc_request.c:1746:22: error: 'index_orig' may be used uninitialized in this function [-Werror=maybe-uninitialized]
     brwpg->pg->index = index_orig;
     ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~

--- Comment (pjones, Thu, 13 Mar 2025 17:20:52 +0000) ---
Merged for 2.17

--- Comment (gerrit, Thu, 13 Mar 2025 17:08:49 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/58296/

Subject: LU-18773 osc: initialize index_orig in osc_brw_prep_request

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 2cfa3592b981b6c42d5fe8c569dd1fda6ce8c1ef

--- Comment (gerrit, Tue, 4 Mar 2025 22:15:51 +0000) ---
"Jian Yu " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/58296

Subject: LU-18773 osc: initialize index_orig in osc_brw_prep_request

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 632f9aa572f0eab71b56fade1996f88f291d709c
